# website_summarizer

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  website_summarizer.ipynb
