[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "summarizing_webpages"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Andr\u00e9 Rizzo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["summarizing_webpages"]
include = ["pyproject.toml", "summarizing_webpages/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["summarizing_webpages"]
force-sort-within-sections = true

